# maji-db-client

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/maji_db_client/: __init__.py  async_supabase_client.py  client.py  models.py  supabase_client.py
tests/: test_async_supabase_client.py  test_documentation.py  test_private_api_client.py  test_supabase_client.py
